--- a/macros.tex
+++ b/macros.tex
@@ -98,6 +98,7 @@
 \newcommand{\fnumlit}[1]{\mathtt{lit}~#1}
 \newcommand{\fplus}{\mathtt{plus}}
 \newcommand{\fhole}{\mathtt{hole}}
+\newcommand{\fnehole}{\mathtt{hole}}
 
 \newcommand{\finj}[1]{\mathtt{inj}~#1}
 \newcommand{\fcase}[2]{\mathtt{case}~#1~#2}
@@ -108,3 +109,13 @@
 \newcommand{\herase}[1]{\left|#1\right|_\textsf{erase}}
 
 \newcommand{\arrmatch}[2]{#1 \blacktriangleright_{\rightarrow} #2}
+
+
+\newcommand{\TABperformAna}[5]{#1 \vdash & #2                & \xlongrightarrow{#4} & #5 & \Leftarrow #3}
+\newcommand{\TABperformSyn}[6]{#1 \vdash & #2 \Rightarrow #3 & \xlongrightarrow{#4} & #5 \Rightarrow #6}
+\newcommand{\TABperformTyp}[3]{& #1 & \xlongrightarrow{#2} & #3}
+
+\newcommand{\TABperformMove}[3]{#1 & \xlongrightarrow{#2} & #3}
+\newcommand{\TABperformDel}[2]{#1 \xlongrightarrow{\aDel} #2}
+
+\newcommand{\sumhasmatched}[2]{#1 \mathrel{\textcolor{violet}{\blacktriangleright_{+}}} #2}
